force-app/src/objects/fferpcore__AccountExtension__c.object
<CustomObject>
    <customHelpPage>fferpcore__AccountExtensionHelp</customHelpPage>
    <description>Stores additional details for specific accounts.</description>
    <fields>
        <fullName>c2g__ConsolidateSalesInvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidate Sales Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Account__c</fullName>
        <description>Salesforce account to which this account extension relates.</description>
        <inlineHelpText>Salesforce account to which this account extension relates.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Extension</relationshipLabel>
        <relationshipName>AccountExtension</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__EInvoicingAddressIdentifier__c</fullName>
        <description>The electronic address for this account which is used for e-invoicing. The combination of scheme plus identifier must be unique.</description>
        <inlineHelpText>The electronic address for this account which is used for e-invoicing. The combination of scheme plus identifier must be unique.</inlineHelpText>
        <label>E-Invoicing Address Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__EInvoicingDoNotAutoSend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, e-invoices for this account will not be sent automatically even if the org-wide flag for automatically sending e-invoices is enabled.</description>
        <inlineHelpText>If selected, e-invoices for this account will not be sent automatically even if the org-wide flag for automatically sending e-invoices is enabled.</inlineHelpText>
        <label>Do Not Automatically Send E-Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__EInvoicingSchemeID__c</fullName>
        <description>The scheme for the electronic address in the format required by your e-invoicing provider. The combination of scheme plus identifier must be unique.</description>
        <inlineHelpText>The scheme for the electronic address in the format required by your e-invoicing provider. The combination of scheme plus identifier must be unique.</inlineHelpText>
        <label>E-Invoicing Address Scheme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxExemptionReason__c</fullName>
        <description>Identifier for the tax exemption reason.</description>
        <inlineHelpText>Identifier for the tax exemption reason.</inlineHelpText>
        <label>Tax Exemption Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__TaxExemptionReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffvat__AccountLegalName__c</fullName>
        <label>Account Legal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Account Extension</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__Account__c</columns>
        <columns>fferpcore__TaxExemptionReason__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AE{0000000}</displayFormat>
        <label>Account Extension ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>